opam-version: "2.0"
synopsis: "A graphical implementation of the royal game of Ur"
description: "A graphical implementation of the royal game of Ur"
maintainer: ["Virgile Robles"]
authors: ["Virgile Robles"]
homepage: "https://github.com/Firobe/Ur"
bug-reports: "https://github.com/Firobe/Ur/issues"
depends: [
  "dune" {>= "2.4"}
  "base-threads"
  "sexplib"
  "ppx_sexp_conv"
  "tsdl"
  "tsdl-image" {>= "0.3"}
  "tsdl-ttf" {>= "0.3"}
  "tsdl-mixer" {>= "0.3.0"}
  "tgls"
]
build: [
  ["./gen-dune.sh"]
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/Firobe/Ur.git"
